# pmp_research

./: Makefile  README.md  pyproject.toml  requirements.txt
configs/data/: pmp_dataset.yaml
configs/model/: dynamo.yaml  pmpgen.yaml
configs/train/: phase1.yaml  phase2.yaml
data/: DATA_ACQUISITION.md
notebooks/: 01_data_exploration.ipynb  02_model_architecture.ipynb  03_attention_maps.ipynb  04_ablation_results.ipynb  05_generation_examples.ipynb
scripts/: download_data.py  evaluate.py  generate.py  preprocess.py  train_phase1.py  train_phase2.py
src/: __init__.py
src/data/: __init__.py  feature_extractor.py  graph_builder.py  md_processor.py  plm_embedder.py
src/evaluation/: __init__.py  ablation.py  benchmark_phase1.py  benchmark_phase2.py  interpretability.py
src/models/: __init__.py
src/models/dynamo/: __init__.py  classifier.py  conf_attention.py  cross_attention.py  dynamo.py  fusion.py  geometry_path.py  gvp_encoder.py  phys_gate.py
src/models/pmpgen/: __init__.py  conditioning.py  ipa_denoiser.py  mem_guidance.py  noise_schedule.py  pmpgen.py  sampler.py  se3_flow.py  sequence_decoder.py
src/models/shared/: __init__.py  geometry.py  graph_utils.py  normalization.py  se3_utils.py
src/training/: __init__.py  callbacks.py  losses.py  metrics.py  trainer_phase1.py  trainer_phase2.py
src/utils/: __init__.py  checkpoint.py  config.py  export_embeddings.py  file_utils.py  logging.py  metrics.py
tests/: __init__.py  conftest.py  test_equivariance.py  test_gvp_shapes.py
