
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmp-research"
version = "0.1.0"
description = "DynaMo + PMPGen: peripheral membrane protein binding prediction and de novo design"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "PMP Research Team", email = "research@example.com"}
]

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "numpy>=1.23.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "PyYAML>=6.0",
    "Pillow>=9.5.0",
]

[project.optional-dependencies]
esm = [
    "fair-esm>=2.0",
]
bio = [
    "biopython>=1.80",
    "MDAnalysis>=2.5.0",
]
ml = [
    "pytorch-lightning>=2.0",
    "wandb>=0.15.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "black>=23.9",
]
all = [
    "pmp-research[esm,bio,ml,dev]",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=html -v"
markers = [
    "slow: slow tests",
    "gpu: tests requiring GPU",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
